package org.example.individualbackend.domain.users;

public class Admin extends User{
    public Admin(int id, String fName, String lName, String picture, String password) {
        super(id, fName, lName, picture, password);
    }
}
