package org.example.individualbackend.domain.create;

import lombok.Builder;
import lombok.Data;

@Data
@Builder
public class CreateUserResponse {
    private final Integer id;
}
